--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li><a href="#nav">Jump to navigation</a></li>
   </ul>
   <header role="banner" class="masthead section-dark section-bg embed embed-16by9" id="galaxies">
-    <div role="main" id="main" tabindex="0" class="absolute w-1 pin-tl text-center pad-t pad-b gutter-1-2">
+    <div tabindex="0" class="absolute w-1 pin-tl text-center pad-t pad-b gutter-1-2">
       <div class="grid grid-middle">
         <div class="unit [ xs-1 l-1-2 ]">
           <h1 class="masthead-title push-1-2" data-shadow="The Search for Hidden&nbsp;Galaxies">The Search for Hidden&nbsp;Galaxies</h1>
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <main>
+  <main role="main" id="main">
 
     <section class="techniques section-light section-bg embed embed-16by9" id="techniques">
       <div class="absolute pin-c text-center island-1-2 w-1 max-length">
